Add suggestions element

--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,16 @@
-<title>co-edit</title>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-Demos: <a href="test/onlinequizcreator.htm">onlinequizcreator</a>
+    <title>co-edit</title>
+
+    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+
+    <link rel="import" href="/bower_components/iron-component-page/iron-component-page.html">
+  </head>
+  <body>
+    <iron-component-page src="co-edit.html"></iron-component-page>
+  </body>
+</html>
