--- a/test/onlinequizcreator.htm
+++ b/test/onlinequizcreator.htm
@@ -26,6 +26,10 @@
 <link rel="stylesheet" type="text/css" href="./onlinequizcreator_files/styles.css">
 <script type="text/javascript" src="./onlinequizcreator_files/modernizr.min.js"></script>
 
+<script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+
+<link rel="import" href="/co-edit.html">
+
 <title>Testkwis - Vraag 1</title>
 </head>
 <body class="page--content page--qsettings page-focus-form user-notloggedin" data-gr-c-s-loaded="true"><nav id="mobilemainmenu" class="mobilemainmenu mm-menu mm-border-full mm- mm-pageshadow mm-offcanvas mm-right mm-front"><div class="mm-panel mm-opened mm-current" id="mm-1"><nav class="langswitch">
@@ -97,6 +101,8 @@
 	</div>
     </div></div>
 
+	<co-edit></co-edit>
+
 
         <noscript>
             &lt;div class="hidden"&gt;
@@ -114,8 +120,6 @@
 		})
 	})
 </script>
-
-<script src="popup-suggestions.js"></script>
 
 <style>
 	.pud:hover {
