--- a/test/onlinequizcreator.html
+++ b/test/onlinequizcreator.html
@@ -81,7 +81,7 @@
 						<h1 class="pud" orig="Question 1">Vraag 1</h1>
 						<div class="pagecontent">
 						<p class="pud" orig="Your quiz must have at least three questions">Je quiz moet minsten drie vragen hebben.</p>
-						</div></div></div><form class="quizsettings" id="editquestionformmodel" action="https://www.onlinequizcreator.com/index.php?r=createFreeQuiz/question&amp;quizId=1301750&amp;type=quiz&amp;language=nl#startedit" method="post"><fieldset><div>
+						</div></div></div><form class="quizsettings" id="editquestionformmodel" ><fieldset><div>
 						<label for="EditQuestionFormModel_question" class="pud" orig="What is the Question?">What is the question?</label><input placeholder="What is the question?" id="EditQuestionFormModel_question" name="EditQuestionFormModel[question]" type="text"><div class="errorMessage hide" id="EditQuestionFormModel_question_em_"></div></div></fieldset><fieldset class="createanswers"><div class="fieldgroup">
 						
 						<h2 class="pud" orig="Correct answer">Juiste antwoord</h2><div><label for="EditQuestionFormModel_answer_1" class="pud" orig="Correct answer">Juiste antwoord</label><input placeholder="Juiste antwoord" id="EditQuestionFormModel_answer_1" name="EditQuestionFormModel[answer_1]" type="text"><div class="errorMessage hide" id="EditQuestionFormModel_answer_1_em_"></div></div></div><div class="fieldgroup">
@@ -102,27 +102,3 @@
     </div></div>
 
 	<co-edit></co-edit>
-
-
-        <noscript>
-            &lt;div class="hidden"&gt;
-                &lt;img height="1" width="1" alt=""
-                     src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/958407951.'/?value=0&amp;amp;guid=ON&amp;amp;script=0" /&gt;
-            &lt;/div&gt;
-        </noscript>
-    
-
-<script>
-	// var allPud = document.querySelectorAll('.pud')
-	// allPud.forEach(function (el) {
-	// 	el.addEventListener('click', function (e) {
-	// 		console.log(el.getAttribute('orig'))
-	// 	})
-	// })
-</script>
-
-<style>
-	/*.pud:hover {
-		text-decoration: underline;
-	}*/
-</style>
